[package]
name = "me"
version = "0.1.4"
edition = "2021"

[[bin]]
name = "me"
path = "src/me.rs"

[dependencies]
chrono = "0.4.43"
whoami = "1.5.1"
# Change this line to use an underscore:
local_ipaddress = "0.1.3" 
# Ensure this has the blocking feature:
reqwest = { version = "0.13", features = ["blocking"] }